--- a/banner3.html
+++ b/banner3.html
@@ -11,7 +11,7 @@
     height: 100%;  
     display: flex;  
     align-items: center;  
-    justify-content: center;  
+    justify-content: center;  居中分布 */
     background-color: #f0f0f0; /* 背景色，可以根据需求调整 */  
   }  
   
