--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <img class="phone-background-image" src="./images/banner_背景图.png" alt="Background Image">
         <img class="phone-foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
       </div>
-      <div class="miniBannerPhone">
-          <img class="miniBanner" src="./images/小banner/Property 1=01.png"/ alt="Mini Banner">
-          <img class="miniBanner" src="./images/小banner/Property 1=02.png"/>
-          <img class="miniBanner" src="./images/小banner/Property 1=03.png"/>
+      <div class="miniBanner">
+          <img src="./images/小banner/Property 1=01.png"/ alt="Mini Banner">
+          <img src="./images/小banner/Property 1=02.png"/>
+          <img src="./images/小banner/Property 1=03.png"/>
       </div>
       <div class="other">
         <img src="./images/内容/内容.png"/>
@@ -73,13 +73,15 @@
         <img class="pad-background-image" src="./images/banner_背景图.png" alt="Background Image">
         <img class="pad-foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
       </div>
-      <div class="miniBannerPhone">
-        <img class="miniBanner" src="./images/小banner/Property 1=01.png"/ alt="Mini Banner">
-        <img class="miniBanner" src="./images/小banner/Property 1=02.png"/>
-        <img class="miniBanner" src="./images/小banner/Property 1=03.png"/>
+      <div class="miniBanner">
+        <img src="./images/小banner/Property 1=01.png"/ alt="Mini Banner">
+        <img src="./images/小banner/Property 1=02.png"/>
+        <img src="./images/小banner/Property 1=03.png"/>
+        <img src="./images/小banner/Property 1=04.png"/>
+        <img src="./images/小banner/Property 1=05.png"/>
       </div>
       <div class="other">
-        <img src="./images/内容/内容.png"/>
+        <img src="./images/内容/pad内容占位.png"/>
       </div>
     </div>
   </div>
