增加尺寸验证 支持跳转设计规范链接

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banner with Foreground and Background Images</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="button.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Banner with Foreground and Background Images</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="button.css">
 </head>
+
 <body>
 
 
@@ -15,69 +17,69 @@
 
     <!-- 画布 -->
     <div class="canvas">
-      <div class="phone" >
+      <div class="phone">
         <div class="top">
-          <img src="./images/内容/手机顶部.png"/>
+          <img src="./images/内容/手机顶部.png" />
         </div>
         <div class="subject">
-            <div class="km s1">
-              <img src="./images/科目图标/阅读.png"/>
-              <span>阅读</span>
-            </div>
-            <div class="km s2">
-              <img src="./images/科目图标/益智.png"/>
-              <span class="font_3 text_10 mt-3">益智</span>
-            </div>
-            <div class="km s3">
-              <img src="/images/科目图标/美育.png"/>
-              <span class="font_3 text_11 mt-3">美育</span>
-            </div>
-            <div class="km s4">
-              <img src="./images/科目图标/写作.png"/>
-              <span class="font_3 text_12 mt-3">写作</span>
-            </div>
-            <div class="km s5">
-              <img src="./images/科目图标/英语.png"/>
-              <span class="font_3 text_13 mt-3">英语</span>
-            </div>
+          <div class="km s1">
+            <img src="./images/科目图标/阅读.png" />
+            <span>阅读</span>
+          </div>
+          <div class="km s2">
+            <img src="./images/科目图标/益智.png" />
+            <span class="font_3 text_10 mt-3">益智</span>
+          </div>
+          <div class="km s3">
+            <img src="/images/科目图标/美育.png" />
+            <span class="font_3 text_11 mt-3">美育</span>
+          </div>
+          <div class="km s4">
+            <img src="./images/科目图标/写作.png" />
+            <span class="font_3 text_12 mt-3">写作</span>
+          </div>
+          <div class="km s5">
+            <img src="./images/科目图标/英语.png" />
+            <span class="font_3 text_13 mt-3">英语</span>
+          </div>
         </div>
         <div class="bigBanner">
           <img class="phone-background-image" src="./images/banner_背景图.png" alt="Background Image">
           <img class="phone-foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
         </div>
         <div class="miniBanner">
-            <img class="miniBannerFirst" src="./images/小banner/Property 1=01.png"/ alt="Mini Banner">
-            <img src="./images/小banner/Property 1=02.png"/>
-            <img src="./images/小banner/Property 1=03.png"/>
+          <img class="miniBannerFirst" src="./images/小banner/Property 1=01.png" / alt="Mini Banner">
+          <img src="./images/小banner/Property 1=02.png" />
+          <img src="./images/小banner/Property 1=03.png" />
         </div>
         <div class="other">
-          <img src="./images/内容/内容.png"/>
+          <img src="./images/内容/内容.png" />
         </div>
-        
+
       </div>
-      <div class="pad" >
+      <div class="pad">
         <div class="top">
-          <img src="./images/内容/pad顶部.png"/>
+          <img src="./images/内容/pad顶部.png" />
         </div>
         <div class="subject">
           <div class="km s1">
-            <img src="./images/科目图标/阅读.png"/>
+            <img src="./images/科目图标/阅读.png" />
             <span>阅读</span>
           </div>
           <div class="km s2">
-            <img src="./images/科目图标/益智.png"/>
+            <img src="./images/科目图标/益智.png" />
             <span class="font_3 text_10 mt-3">益智</span>
           </div>
           <div class="km s3">
-            <img src="/images/科目图标/美育.png"/>
+            <img src="/images/科目图标/美育.png" />
             <span class="font_3 text_11 mt-3">美育</span>
           </div>
           <div class="km s4">
-            <img src="./images/科目图标/写作.png"/>
+            <img src="./images/科目图标/写作.png" />
             <span class="font_3 text_12 mt-3">写作</span>
           </div>
           <div class="km s5">
-            <img src="./images/科目图标/英语.png"/>
+            <img src="./images/科目图标/英语.png" />
             <span class="font_3 text_13 mt-3">英语</span>
           </div>
         </div>
@@ -86,14 +88,14 @@
           <img class="pad-foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
         </div>
         <div class="miniBanner">
-          <img class="miniBannerFirst" src="./images/小banner/Property 1=01.png"/ alt="Mini Banner">
-          <img src="./images/小banner/Property 1=02.png"/>
-          <img src="./images/小banner/Property 1=03.png"/>
-          <img src="./images/小banner/Property 1=04.png"/>
-          <img src="./images/小banner/Property 1=05.png"/>
+          <img class="miniBannerFirst" src="./images/小banner/Property 1=01.png" / alt="Mini Banner">
+          <img src="./images/小banner/Property 1=02.png" />
+          <img src="./images/小banner/Property 1=03.png" />
+          <img src="./images/小banner/Property 1=04.png" />
+          <img src="./images/小banner/Property 1=05.png" />
         </div>
         <div class="other">
-          <img src="./images/内容/pad内容占位.png"/>
+          <img src="./images/内容/pad内容占位.png" />
         </div>
       </div>
     </div>
@@ -101,9 +103,13 @@
     <div class="menu">
       <div class="title"><span>资源列表</span></div>
       <div class="resources">
-        
+
         <div class="list">
-          <span>大banner前景图</span>
+          <div class="zyname">
+            <span>大banner前景图</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
           <button class="button_line" id="uploadForegroundButton">
             <iconpark-icon name="upload"></iconpark-icon>
             <span>上传</span>
@@ -111,15 +117,23 @@
           <input type="file" id="fileInputForeground" accept="image/*" style="display: none;">
         </div>
         <div class="list">
-          <span>大banner背景图</span>
+          <div class="zyname">
+            <span>大banner背景图</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
           <button class="button_line" id="uploadBackgroundButton">
             <iconpark-icon name="upload"></iconpark-icon>
             <span>上传</span>
           </button>
-           <input type="file" id="fileInputBackground" accept="image/*" style="display: none;">
+          <input type="file" id="fileInputBackground" accept="image/*" style="display: none;">
         </div>
         <div class="list">
-          <span>小banner</span>
+          <div class="zyname">
+            <span>小banner</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/gwva2dxOW4KX7gmQCQN1X2oz8bkz3BRL?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
           <button class="button_line" id="uploadMiniBannerButton">
             <iconpark-icon name="upload"></iconpark-icon>
             <span>上传</span>
@@ -128,14 +142,14 @@
         </div>
       </div>
     </div>
-
   </div>
-  
-   
 
 
-  
-<script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_1.92615290dc3354e6b03619fc9a04d712.es5.js"></script>
-<script src="/scripts.js"></script>
+
+
+  <script
+    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_2.f56b6ba15985c107090bb80b290a3183.js"></script>
+  <script src="/scripts.js"></script>
 </body>
+
 </html>
