--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Banner with Foreground and Background Images</title>
+  <title>效果预览</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="base.css">
   <link rel="stylesheet" href="button.css">
@@ -146,9 +146,13 @@
 
 
 
-
+  // 调用图标库
   <script
     src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_2.f56b6ba15985c107090bb80b290a3183.js"></script>
+
+  // 调用尺寸检测函数
+  <script src="/size verification/verification function.js"></script>
+
   <script src="/scripts.js"></script>
 </body>
 
