更新尺寸检测功能

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>效果预览</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="base.css">
-  <link rel="stylesheet" href="button.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/button.css">
 </head>
 
 <body>
@@ -44,8 +44,8 @@
           </div>
         </div>
         <div class="bigBanner">
-          <img class="phone-background-image" src="./images/banner_背景图.png" alt="Background Image">
-          <img class="phone-foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
+          <img class="background-image" src="./images/banner_背景图.png" alt="Background Image">
+          <img class="foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
         </div>
         <div class="miniBanner">
           <img class="miniBannerFirst" src="./images/小banner/Property 1=01.png" / alt="Mini Banner">
@@ -84,8 +84,8 @@
           </div>
         </div>
         <div class="bigBanner">
-          <img class="pad-background-image" src="./images/banner_背景图.png" alt="Background Image">
-          <img class="pad-foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
+          <img class="background-image" src="./images/banner_背景图.png" alt="Background Image">
+          <img class="foreground-image" src="./images/banner_前景图.png" alt="Foreground Image">
         </div>
         <div class="miniBanner">
           <img class="miniBannerFirst" src="./images/小banner/Property 1=01.png" / alt="Mini Banner">
@@ -146,14 +146,14 @@
 
 
 
-  // 调用图标库
+  <!-- 调用图标库 -->
   <script
     src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_2.f56b6ba15985c107090bb80b290a3183.js"></script>
 
-  // 调用尺寸检测函数
-  <script src="/size verification/verification function.js"></script>
+  <!-- 调用尺寸检测函数 -->
+  <script src="/JavaScript/verification function.js"></script>
 
-  <script src="/scripts.js"></script>
+  <script src="/JavaScript/scripts.js"></script>
 </body>
 
 </html>
