--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 <body>
 
+  <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon>
+  <div id="menu-layer" class="menu-layer">
+    <dl id="listContent">
+      <!-- List content will be added here dynamically -->
+    </dl>
+  </div>
 
   <div class="page">
 
