--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
   <!-- 调用尺寸检测函数 -->
   <script src="/JavaScript/verification function.js"></script>
 
+  <script src="/JavaScript/menu.js"></script>
+
   <script src="/JavaScript/scripts.js"></script>
 </body>
 
