--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/button.css">
+  <link rel="stylesheet" href="/css/menu.css">
 </head>
 
 <body>
