添加我的页面

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>效果预览</title>
+  <title>资源效果预览</title>
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/button.css">
   <link rel="stylesheet" href="/css/menu.css">
+  <link rel="shortcut icon" href="/images/启动图标.png">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 
 
 
-  <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon>
+  <!-- <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon> -->
   <div id="menu-layer" class="menu-layer">
     <dl id="listContent">
       <!-- List content will be added here dynamically -->
