--- a/pages/my/wodeye.html
+++ b/pages/my/wodeye.html
@@ -2,77 +2,124 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>codefun</title>
-  <link rel="stylesheet" href="../../index.css" />
-  <link rel="stylesheet" href="./wodeye.css" />
-  <script type="text/javascript" src="./wodeye.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>资源效果预览</title>
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/menu.css">
+  <link rel="stylesheet" href="/css/page.css">
+  <link rel="stylesheet" href="./wodeye.css">
+  <link rel="shortcut icon" href="/images/启动图标.png">
+
 </head>
 
 <body>
-  <div class="page">
-    <div class="gc-flex-col">
-      <img class="image"
-        src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=b74e81b7a400928712466c43a41633c1.png" />
-      <img class="top"
-        src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=961442f427f9fe4613ce09bd6594b64e.png" />
-      <div class="gc-flex-row gc-justify-between small_ad">
-        <img class="image_3"
-          src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=473da3a8a928a791c9177234e9e85408.png" />
-        <img class="image_4"
-          src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=3bc2193d211c11665d17d7ec50afca24.png" />
-      </div>
-      <img class="function_icon"
-        src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=7182aa9b1cb7c00e58130a24819a2706.png" />
-      <div class="gc-flex-col group">
-        <div class="gc-flex-row gc-justify-between group_4">
-          <span class="font text">邀请活动</span>
-          <div class="gc-flex-row gc-items-center group_5">
-            <img class="image_6"
-              src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=35379a98af8c2c2fc5434a6d1e227983.png" />
-            <span class="text_2">邀请奖励记录</span>
-          </div>
-        </div>
-        <div class="gc-flex-row mt-13">
-          <div class="gc-flex-col gc-justify-start equal-division-item section_2">
-            <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper">
-              <img class="image_7"
-                src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-            </div>
-          </div>
-          <div class="gc-ml-8 gc-flex-col gc-justify-start equal-division-item_2 section_3">
-            <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_2">
-              <img class="image_7"
-                src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="gc-flex-col mall">
-        <span class="gc-self-start font text_3">叫叫商城</span>
-        <div class="gc-flex-row equal-division mt-13">
-          <div class="gc-flex-col gc-justify-start equal-division-item equal-division-item_3">
-            <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_3 view">
-              <img class="image_7"
-                src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-            </div>
-          </div>
-          <div class="gc-ml-8 gc-flex-col gc-justify-start equal-division-item_2 equal-division-item_3">
-            <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_3 view_2">
-              <img class="image_7"
-                src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <img class="contact"
-        src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=fea33ff4bd54c537436f3f3b15c1de08.png" />
-    </div>
-    <img class="tabBar"
-      src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=06586ad3b0e2ba53ef5427257a1f6b65.png" />
+
+
+  <div id="menu-layer" class="menu-layer">
+    <dl id="listContent">
+      <!-- List content will be added here dynamically -->
+    </dl>
   </div>
+
+  <div class="page">
+
+    <!-- 画布 -->
+    <div class="canvas">
+      <div class="phone">
+        <div class="gc-flex-col">
+          <img class="image"
+            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=b74e81b7a400928712466c43a41633c1.png" />
+          <img class="top"
+            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=961442f427f9fe4613ce09bd6594b64e.png" />
+          <div class="gc-flex-row gc-justify-between small_ad">
+            <img class="image_3"
+              src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=473da3a8a928a791c9177234e9e85408.png" />
+            <img class="image_4"
+              src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=3bc2193d211c11665d17d7ec50afca24.png" />
+          </div>
+          <img class="function_icon"
+            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=7182aa9b1cb7c00e58130a24819a2706.png" />
+          <div class="gc-flex-col group">
+            <div class="gc-flex-row gc-justify-between group_4">
+              <span class="font text">邀请活动</span>
+              <div class="gc-flex-row gc-items-center group_5">
+                <img class="image_6"
+                  src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=35379a98af8c2c2fc5434a6d1e227983.png" />
+                <span class="text_2">邀请奖励记录</span>
+              </div>
+            </div>
+            <div class="gc-flex-row mt-13">
+              <div class="gc-flex-col gc-justify-start equal-division-item section_2">
+                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper">
+                  <img class="image_7"
+                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
+                </div>
+              </div>
+              <div class="gc-ml-8 gc-flex-col gc-justify-start equal-division-item_2 section_3">
+                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_2">
+                  <img class="image_7"
+                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gc-flex-col mall">
+            <span class="gc-self-start font text_3">叫叫商城</span>
+            <div class="gc-flex-row equal-division mt-13">
+              <div class="gc-flex-col gc-justify-start equal-division-item equal-division-item_3">
+                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_3 view">
+                  <img class="image_7"
+                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
+                </div>
+              </div>
+              <div class="gc-ml-8 gc-flex-col gc-justify-start equal-division-item_2 equal-division-item_3">
+                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_3 view_2">
+                  <img class="image_7"
+                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <img class="contact"
+            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=fea33ff4bd54c537436f3f3b15c1de08.png" />
+        </div>
+        <img class="tabBar"
+          src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=06586ad3b0e2ba53ef5427257a1f6b65.png" />
+      </div>
+      <div class="pad">
+
+      </div>
+    </div>
+    <!-- 资源清单 -->
+    <div class="menu">
+      <div class="title"><span>资源列表</span></div>
+      <div class="resources">
+
+        <custom-component title="我的标题" link="https://huaban.com/search?q=UI" button-id="uploadButton1"
+          input-id="fileInput1"></custom-component>
+
+        <custom-component title="另一个标题" link="https://huaban.com/search?q=UI" button-id="uploadButton2"
+          input-id="fileInput2"></custom-component>
+
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- 调用图标库 -->
+  <script
+    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_6.5c7e9e3ebe7d2f8a867501abc4e91960.js"></script>
+
+  <!-- 调用尺寸检测函数 -->
+  <script src="/JavaScript/verification function.js"></script>
+
+  <script src="/JavaScript/menu.js"></script>
+
+  <script src="/JavaScript/scripts.js"></script>
+
+  <script src="/JavaScript/upload button.js"> </script>
 </body>
 
 </html>
