更新我的页

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
 
 
-
-
-  <!-- <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon> -->
+  <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon>
   <div id="menu-layer" class="menu-layer">
     <dl id="listContent">
       <!-- List content will be added here dynamically -->
@@ -139,6 +137,7 @@
           </button>
           <input type="file" id="fileInputBackground" accept="image/*" style="display: none;">
         </div>
+
         <div class="list">
           <div class="zyname">
             <span>小banner</span>
@@ -151,6 +150,7 @@
           </button>
           <input type="file" id="fileInputMiniBanner" accept="image/*" style="display: none;">
         </div>
+
       </div>
     </div>
   </div>
