--- a/pages/my/wodeye.html
+++ b/pages/my/wodeye.html
@@ -5,20 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>资源效果预览</title>
+  <link rel="stylesheet" href="./wodeye.css">
+  <link rel="stylesheet" href="/css/page.css">
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/menu.css">
-  <link rel="stylesheet" href="/css/page.css">
-  <link rel="stylesheet" href="./wodeye.css">
+  <link rel="stylesheet" href="/css/zylb.css">
   <link rel="shortcut icon" href="/images/启动图标.png">
 
 </head>
 
 <body>
 
-
+  <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon>
   <div id="menu-layer" class="menu-layer">
     <dl id="listContent">
-      <!-- List content will be added here dynamically -->
+      <!-- 列表内容将动态添加在这里 -->
     </dl>
   </div>
 
@@ -27,68 +28,98 @@
     <!-- 画布 -->
     <div class="canvas">
       <div class="phone">
-        <div class="gc-flex-col">
-          <img class="image"
-            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=b74e81b7a400928712466c43a41633c1.png" />
-          <img class="top"
-            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=961442f427f9fe4613ce09bd6594b64e.png" />
-          <div class="gc-flex-row gc-justify-between small_ad">
-            <img class="image_3"
-              src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=473da3a8a928a791c9177234e9e85408.png" />
-            <img class="image_4"
-              src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=3bc2193d211c11665d17d7ec50afca24.png" />
+        <img class="status_bar" src="/images/我的页/phone/状态栏.png" />
+        <div class="neirong">
+          <img class="top" src="/images/我的页/phone/顶部.png" />
+          <div class="small_ad">
+            <img class="left-img" src="/images/我的页/资源/广告图_左.png" />
+            <img class="right_img" src="/images/我的页/资源/广告图_右.png" />
           </div>
-          <img class="function_icon"
-            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=7182aa9b1cb7c00e58130a24819a2706.png" />
-          <div class="gc-flex-col group">
-            <div class="gc-flex-row gc-justify-between group_4">
-              <span class="font text">邀请活动</span>
-              <div class="gc-flex-row gc-items-center group_5">
-                <img class="image_6"
-                  src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=35379a98af8c2c2fc5434a6d1e227983.png" />
+          <img src="/images/我的页/phone/功能图标区域.png" />
+          <div class="huodong">
+            <div class="hdbiaoti">
+              <p>邀请活动</p>
+              <div class="hdbiaoti_r">
                 <span class="text_2">邀请奖励记录</span>
+                <iconpark-icon name="right"></iconpark-icon>
               </div>
             </div>
-            <div class="gc-flex-row mt-13">
-              <div class="gc-flex-col gc-justify-start equal-division-item section_2">
-                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper">
-                  <img class="image_7"
-                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-                </div>
+            <div class="hdbanner">
+              <div class="hdbanner1-1">
+                <img class="hdkpimg" src="/images/我的页/资源/邀请活动01.png" />
               </div>
-              <div class="gc-ml-8 gc-flex-col gc-justify-start equal-division-item_2 section_3">
-                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_2">
-                  <img class="image_7"
-                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-                </div>
+              <div class="hdbanner1-2">
+                <img src="/images/我的页/资源/邀请活动02.png" />
               </div>
             </div>
           </div>
-          <div class="gc-flex-col mall">
-            <span class="gc-self-start font text_3">叫叫商城</span>
-            <div class="gc-flex-row equal-division mt-13">
-              <div class="gc-flex-col gc-justify-start equal-division-item equal-division-item_3">
-                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_3 view">
-                  <img class="image_7"
-                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-                </div>
+          <div class="huodong">
+            <div class="hdbiaoti">
+              <p>邀请活动</p>
+              <div class="hdbiaoti_r">
+                <span class="text_2">邀请奖励记录</span>
+                <iconpark-icon name="right"></iconpark-icon>
               </div>
-              <div class="gc-ml-8 gc-flex-col gc-justify-start equal-division-item_2 equal-division-item_3">
-                <div class="gc-flex-col gc-justify-start gc-items-center image-wrapper_3 view_2">
-                  <img class="image_7"
-                    src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=0d85555b7f7efae2100b144e5a3def58.png" />
-                </div>
+            </div>
+            <div class="hdbanner">
+              <div class="hdbanner2-1">
+                <img src="/images/我的页/资源/商场1.png" />
+              </div>
+              <div class="hdbanner2-2">
+                <img src="/images/我的页/资源/商场2.png" />
               </div>
             </div>
           </div>
-          <img class="contact"
-            src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=fea33ff4bd54c537436f3f3b15c1de08.png" />
+          <img class="contact" src="/images/我的页/phone/联系电话.png" />
         </div>
-        <img class="tabBar"
-          src="https://ide.code.fun/api/image?token=66208687955475001196f54d&name=06586ad3b0e2ba53ef5427257a1f6b65.png" />
+        <img class="tabBar" src="/images/我的页/phone/标签栏.png" />
       </div>
       <div class="pad">
-
+        <img class="status_bar" src="/images/我的页/pad/状态栏.png" />
+        <div class="neirong">
+          <img class="top" src="/images/我的页/pad/顶部.png" />
+          <div class="small_ad">
+            <img class="left-img" src="/images/我的页/资源/广告图_左.png" />
+            <img class="right_img" src="/images/我的页/资源/广告图_右.png" />
+          </div>
+          <img src="/images/我的页/pad/功能图标区域.png" />
+          <div class="huodong">
+            <div class="hdbiaoti">
+              <p>邀请活动</p>
+              <div class="hdbiaoti_r">
+                <span class="text_2">邀请奖励记录</span>
+                <iconpark-icon name="right"></iconpark-icon>
+              </div>
+            </div>
+            <div class="hdbanner">
+              <div class="hdbanner1-1">
+                <img class="hdkpimg" src="/images/我的页/资源/邀请活动01.png" />
+              </div>
+              <div class="hdbanner1-2">
+                <img src="/images/我的页/资源/邀请活动02.png" />
+              </div>
+            </div>
+          </div>
+          <div class="huodong">
+            <div class="hdbiaoti">
+              <p>邀请活动</p>
+              <div class="hdbiaoti_r">
+                <span class="text_2">邀请奖励记录</span>
+                <iconpark-icon name="right"></iconpark-icon>
+              </div>
+            </div>
+            <div class="hdbanner">
+              <div class="hdbanner2-1">
+                <img src="/images/我的页/资源/商场1.png" />
+              </div>
+              <div class="hdbanner2-2">
+                <img src="/images/我的页/资源/商场2.png" />
+              </div>
+            </div>
+          </div>
+          <img class="contact" src="/images/我的页/pad/联系电话.png" />
+        </div>
+        <img class="tabBar" src="/images/我的页/pad/标签栏.png" />
       </div>
     </div>
     <!-- 资源清单 -->
@@ -96,11 +127,64 @@
       <div class="title"><span>资源列表</span></div>
       <div class="resources">
 
-        <custom-component title="我的标题" link="https://huaban.com/search?q=UI" button-id="uploadButton1"
-          input-id="fileInput1"></custom-component>
+        <div class="list">
+          <div class="zyname">
+            <span>通知条-左</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/NZQYprEoWoe9jQgXHROmK7YXJ1waOeDk?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
+          <button class="button_line" id="button-notice">
+            <iconpark-icon name="upload"></iconpark-icon>
+            <span>上传</span>
+          </button>
+          <input type="file" id="inputNoticeLeft" accept="image/*" style="display: none;">
+        </div>
 
-        <custom-component title="另一个标题" link="https://huaban.com/search?q=UI" button-id="uploadButton2"
-          input-id="fileInput2"></custom-component>
+        <div class="list">
+          <div class="zyname">
+            <span>通知条-右</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
+          <button class="button_line" id="uploadBackgroundButton">
+            <iconpark-icon name="upload"></iconpark-icon>
+            <span>上传</span>
+          </button>
+          <input type="file" id="inputNoticeRight" accept="image/*" style="display: none;">
+        </div>
+
+        <div class="list">
+          <div class="zyname">
+            <span>通知条-背景色</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
+          <input type="text" class="colorInput tztcolorInput" placeholder="色值">
+
+        </div>
+
+        <div class="list">
+          <div class="zyname">
+            <span>活动卡片</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/gwva2dxOW4KX7gmQCQN1X2oz8bkz3BRL?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
+          <button class="button_line" id="uploadhdBanner">
+            <iconpark-icon name="upload"></iconpark-icon>
+            <span>上传</span>
+          </button>
+          <input type="file" id="fileInputhdBanner" accept="image/*" style="display: none;">
+        </div>
+
+        <div class="list">
+          <div class="zyname">
+            <span>活动卡片-背景</span>
+            <a href="https://alidocs.dingtalk.com/i/nodes/mExel2BLV54K0MnQCxk2Pq2wWgk9rpMq?utm_scene=team_space"
+              target="_blank"><iconpark-icon name="help"></iconpark-icon></a>
+          </div>
+          <input type="text" class="colorInput hdcolorInput" placeholder="色值">
+
+        </div>
 
       </div>
     </div>
@@ -110,16 +194,18 @@
 
   <!-- 调用图标库 -->
   <script
-    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_6.5c7e9e3ebe7d2f8a867501abc4e91960.js"></script>
-
+    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_8.aeb1b6898a0fb5349b3c09869cee58e3.js"></script>
   <!-- 调用尺寸检测函数 -->
+
+  <script src="/JavaScript/validateImageHeight.js"></script>
   <script src="/JavaScript/verification function.js"></script>
+  <script src="./wodeye.js"></script>
 
   <script src="/JavaScript/menu.js"></script>
+  <script src="./Change color.js"></script>
 
-  <script src="/JavaScript/scripts.js"></script>
 
-  <script src="/JavaScript/upload button.js"> </script>
+
 </body>
 
 </html>
