--- a/pages/my/wodeye.html
+++ b/pages/my/wodeye.html
@@ -8,20 +8,15 @@
   <link rel="stylesheet" href="./wodeye.css">
   <link rel="stylesheet" href="/css/page.css">
   <link rel="stylesheet" href="/css/base.css">
-  <link rel="stylesheet" href="/css/menu.css">
   <link rel="stylesheet" href="/css/zylb.css">
   <link rel="shortcut icon" href="/images/启动图标.png">
 
 </head>
 
 <body>
-
-  <iconpark-icon name="application-menu" id="menu-icon"></iconpark-icon>
-  <div id="menu-layer" class="menu-layer">
-    <dl id="listContent">
-      <!-- 列表内容将动态添加在这里 -->
-    </dl>
-  </div>
+  <a href="/index.html" target="_blank">
+    <iconpark-icon name="home" class="home-icon"></iconpark-icon>
+  </a>
 
   <div class="page">
 
@@ -194,7 +189,7 @@
 
   <!-- 调用图标库 -->
   <script
-    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_8.aeb1b6898a0fb5349b3c09869cee58e3.js"></script>
+    src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_32441_9.52a92dbd4723cbb8b9447abd54bdee4a.js"></script>
   <!-- 调用尺寸检测函数 -->
 
   <script src="/JavaScript/validateImageHeight.js"></script>
