--- a/pages/square/guangchang.html
+++ b/pages/square/guangchang.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>资源效果预览</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/pages/square/guangchang.css">
   <link rel="stylesheet" href="/css/base.css">
-  <!-- <link rel="stylesheet" href="/css/button.css"> -->
   <link rel="stylesheet" href="/css/menu.css">
   <link rel="stylesheet" href="/css/page.css">
   <link rel="stylesheet" href="/css/zylb.css">
