--- a/pages/my/wodeye.html
+++ b/pages/my/wodeye.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>资源效果预览</title>
+  <title>我的页</title>
   <link rel="stylesheet" href="./wodeye.css">
   <link rel="stylesheet" href="/css/page.css">
   <link rel="stylesheet" href="/css/base.css">
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <a href="/index.html" target="_blank">
+  <a href="/index.html">
     <iconpark-icon name="home" class="home-icon"></iconpark-icon>
   </a>
 
