--- a/pages/square/guangchang copy.html
+++ b/pages/square/guangchang copy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>广场页</title>
+  <title>资源效果预览</title>
   <link rel="stylesheet" href="/pages/square/guangchang.css">
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/menu.css">
@@ -16,7 +16,7 @@
 <body>
 
 
-  <a href="/index.html">
+  <a href="/index.html" target="_blank">
     <iconpark-icon name="home" class="home-icon"></iconpark-icon>
   </a>
 
@@ -28,8 +28,8 @@
         <div class="top">
           <img src="/images/广场页/状态栏.png" />
           <div class="navigationBar">
-            <img class="logo" src="/images/广场页/叫叫 Logo - 基础.png" alt="">
-            <img class="scan" src="/images/广场页/扫一扫.png" alt="">
+            <img src="/images/广场页/叫叫 Logo - 基础.png" alt="">
+            <img src="/images/广场页/扫一扫.png" alt="">
           </div>
         </div>
         <div class="neirong">
@@ -69,16 +69,11 @@
           </div>
         </div>
 
-        <img class="tabBar" src="/images/广场页/底部标签栏.png">
 
       </div>
-      <div class=" pad">
+      <div class="pad">
         <div class="top">
-          <img src="/images/广场页/状态栏_pad.png" />
-          <div class="navigationBar">
-            <img class="logo" src="/images/广场页/叫叫 Logo - 基础.png" alt="">
-            <img class="scan" src="/images/广场页/扫一扫.png" alt="">
-          </div>
+          <img src="/images/内容/pad顶部.png" />
         </div>
         <div class="neirong">
           <div class="subject">
@@ -118,7 +113,7 @@
             <img src="/images/内容/pad内容占位.png" />
           </div>
         </div>
-        <img class="tabBar" src="/images/广场页/底部标签栏_pad.png" />
+
       </div>
     </div>
     <!-- 资源清单 -->
@@ -180,8 +175,6 @@
   <script src="/JavaScript/menu.js"></script>
 
   <script src="/JavaScript/scripts.js"></script>
-
-  <script src="/pages/square/guangchang.js"></script>
 </body>
 
 </html>
